--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
 html,
 body {
     height: 100%;
-    background: url('/images/backgrounds/background_6.jpg');
-    background-size: cover auto;
+    background: url('/images/backgrounds/background_10.jpg');
+    background-size: cover;
 }
 
 .wrapper {
