--- a/css/style.css
+++ b/css/style.css
@@ -8,16 +8,22 @@
 html,
 body {
     height: 100%;
-    background: url('/images/backgrounds/background_10.jpg');
+    background-image: url('/images/backgrounds/background_10.jpg');
     background-size: cover;
 }
 
 .wrapper {
+    max-width: 1200px;
+    min-width: 320px;
+    height: 100%;
+    margin: auto;
     display: flex;
     flex-flow: column wrap;
     justify-content: space-around;
+    background-image: url(/images/backgrounds/fon8.gif);
 }
 
 .container {
     display: block;
+    flex-basis: 30%;
 }
