--- a/css/style.css
+++ b/css/style.css
@@ -12,18 +12,17 @@ body {
     background-size: cover;
 }
 
-/* .wrapper {
-    max-width: 1200px;
-    min-width: 320px;
-    height: 100%;
-    margin: auto;
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: space-around;
+.wrapper {
+    min-height: 100%;
     background-image: url(/images/backgrounds/fon8.gif);
+    min-width: 291px;
 }
 
-.container {
-    display: block;
-    flex-basis: 30%;
-} */
+.hqader {
+    min-height: 200px;
+}
+
+.header-logotype a {
+    background-image: url('/images/logo/logo72.png');
+    background-size: cover;
+}
