--- a/css/style.css
+++ b/css/style.css
@@ -88,11 +88,17 @@ a.dropdown-item:hover {
 }
 
 /* ! -------------------------------- BLOCK-CONTENT style -------------------------------- */
-
-
 /* ! -------------------------------- MAIN style -------------------------------- */
 .main p {
     margin: 0;
+}
+
+.post .nav-link {
+    color: rgba(34, 37, 41, .8);
+}
+
+.post .nav-link:hover {
+    color: rgb(30, 106, 172);
 }
 
 /* ! -------------------------------- ASIDE style -------------------------------- */
