--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ body {
     padding: 0;
 }
 
+*.nav-link:hover {
+    transition: all .8s;
+}
+
 /* ! -------------------------------- HEADER style -------------------------------- */
 .header {
     background-color: #11acac;
@@ -89,8 +93,18 @@ a.dropdown-item:hover {
 
 /* ! -------------------------------- BLOCK-CONTENT style -------------------------------- */
 /* ! -------------------------------- MAIN style -------------------------------- */
-.main p {
+/* .main p {
     margin: 0;
+} */
+
+.main-title {
+    margin: 10px 0 20px;
+}
+
+.post {
+    background: rgb(250, 250, 250);
+    border: 1px solid rgb(150, 150, 150);
+    border-radius: 5px;
 }
 
 .post .nav-link {
@@ -99,37 +113,101 @@ a.dropdown-item:hover {
 
 .post .nav-link:hover {
     color: rgb(30, 106, 172);
+    text-decoration: underline;
 }
 
 /* ! -------------------------------- ASIDE style -------------------------------- */
+
+.aside .section {
+    background: rgb(250, 250, 250);
+    border: 1px solid rgb(150, 150, 150);
+    border-radius: 5px;
+}
 
 .aside p {
     margin: 0;
 }
 
+.aside .aside-list {
+    list-style: none;
+    padding-left: 10px;
+}
+
+.aside .search-input {
+    border: 2px solid rgba(50, 50, 50, .6);
+}
+
+.aside .search-btn {
+    color: rgb(50, 50, 50);
+    border: 2px solid rgb(50, 50, 50);
+    font-weight: 700;
+    transition: all .5s;
+}
+
+.aside .search-btn:hover {
+    color: rgb(36, 124, 201);
+    background-color: rgb(240, 240, 240);
+}
+
+.aside a.nav-link:hover {
+    /* width: max-content; */
+    margin-left: 5px;
+    color: rgb(36, 124, 201);
+    font-weight: 700;
+
+}
+
 /* ! -------------------------------- FOOTER style -------------------------------- */
 .footer {
-    height: 100px;
-    background-color: rgb(140, 139, 139);
+    min-height: 100px;
+    background-color: rgb(154, 153, 153);
     color: aliceblue;
+}
+
+.footer p {
+    margin-bottom: 5px;
+    padding: 5px;
+}
+
+.footer .form-control {
+    background-color: rgb(224, 223, 223);
+    color: #000;
 }
 
 .footer h1,
 .footer h2,
 .footer h3,
 .footer h4,
-.footer h5,
+.footer h5 {
+    padding: 5px;
+    color: rgb(46, 34, 141)
+}
+
 .footer h6 {
-    margin: 0;
+    color: #102222;
 }
 
-.footer a {
-    /* display: block; */
-    font-size: 22px;
-    ;
+.footer .socials .fab {
+    font-size: 20px;
+    padding: 5px;
+    border: 1px solid #000;
+    border-radius: 5px;
 }
 
-.footer a:hover {
+.footer .socials .fab:hover {
+    border: 1px solid #e8e3e3;
+    transition: all .5s;
+}
+
+.footer .footer-links ul {
+    padding: 10px;
+}
+
+.footer .nav-link {
+    font-size: 20px;
+}
+
+.footer .nav-link:hover {
     color: #102222;
 }
 
